force-app/main/default/objects/Account/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <description>Abbreviation of this institution&apos;s name</description>
    <inlineHelpText>Abbreviation of this institution&apos;s name</inlineHelpText>
    <label>Abbreviation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>