force-app/main/default/objects/Account/fields/Account_black_listed__c.field-meta.xml
<CustomField>
    <fullName>Account_black_listed__c</fullName>
    <description>Checked if this account has been marked with the Red flag &quot;Black list&quot; indicator</description>
    <formula>Red_flag_Black_list__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this account has been marked with the Red flag &quot;Black list&quot; indicator</inlineHelpText>
    <label>Account black-listed</label>
    <type>Checkbox</type>
</CustomField>