force-app/main/default/objects/Account/fields/Account_name_minus_CONFIDENTIAL__c.field-meta.xml
<CustomField>
    <fullName>Account_name_minus_CONFIDENTIAL__c</fullName>
    <description>The account name without [CONFIDENTIAL] suffix</description>
    <formula>IF(CONTAINS( Name , &quot;[CONFIDENTIAL]&quot;),
 TRIM(SUBSTITUTE( Name , &quot;[CONFIDENTIAL]&quot;, &quot;&quot;)),
 Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The account name without [CONFIDENTIAL] suffix</inlineHelpText>
    <label>Account name minus CONFIDENTIAL</label>
    <type>Text</type>
</CustomField>