force-app/main/default/objects/Account/fields/Account_name_or_anonymous__c.field-meta.xml
<CustomField>
    <fullName>Account_name_or_anonymous__c</fullName>
    <description>The name of the organization or &quot;Anonymous Organization&quot; if Keep Confidential is checked either on the account or the parent country</description>
    <formula>IF( Keep_confidential__c || GM_country__r.Keep_confidential__c , &quot;Anonymous Organization&quot;, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the organization or &quot;Anonymous Organization&quot; if Keep Confidential is checked either on the account or the parent country</inlineHelpText>
    <label>Account name or anonymous</label>
    <type>Text</type>
</CustomField>