force-app/main/default/objects/Account/fields/Account_number__c.field-meta.xml
<CustomField>
    <fullName>Account_number__c</fullName>
    <description>Auto-generated number for account records</description>
    <displayFormat>A{0000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Auto-generated number for account records</inlineHelpText>
    <label>Account number</label>
    <type>AutoNumber</type>
</CustomField>