force-app/main/default/objects/Account/fields/Account_Priority__c.field-meta.xml
<CustomField>
    <fullName>Account_Priority__c</fullName>
    <description>Priority of Accounts - formerly &quot;Cluster Head&quot;</description>
    <inlineHelpText>Priority of Accounts - formerly &quot;Cluster Head&quot;. In a &quot;Cluster,&quot; select a Primary and Secondary account.</inlineHelpText>
    <label>Account Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Account</fullName>
            </value>
            <value>
                <fullName>Secondary Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>