force-app/main/default/objects/Account/fields/Account_status__c.field-meta.xml
<CustomField>
    <fullName>Account_status__c</fullName>
    <description>An INACTIVE account should not generally be used for mailings, campaigns, or solicitations.  An account is automatically marked INACTIVE if all associated Contacts are deceased.  Gifts cannot be posted to an INACTIVE account.</description>
    <inlineHelpText>An INACTIVE account should not generally be used for mailings, campaigns, or solicitations.  An account is automatically marked INACTIVE if all associated Contacts are deceased.  Gifts cannot be posted to an INACTIVE account.</inlineHelpText>
    <label>Account status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>