force-app/main/default/objects/Account/fields/Account_type__c.field-meta.xml
<CustomField>
    <fullName>Account_type__c</fullName>
    <description>A picklist of the highest level categorization of this Account. The category can be further described in the Secondary Type field.</description>
    <inlineHelpText>A picklist of the highest level categorization of this Account. The category can be further described in the Secondary Type field.</inlineHelpText>
    <label>Account type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_type</valueSetName>
    </valueSet>
</CustomField>