force-app/main/default/objects/Account/fields/AccountExternalID__c.field-meta.xml
<CustomField>
    <fullName>AccountExternalID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A unique Account identifier, used during the process of converting data into Affinaquest.</description>
    <externalId>true</externalId>
    <inlineHelpText>A unique Account identifier, used during the process of converting data into Affinaquest.</inlineHelpText>
    <label>Account External ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>