force-app/main/default/objects/Account/fields/Analysis_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Strategy__c</fullName>
    <description>Analysis and strategy related to this account</description>
    <inlineHelpText>Analysis and strategy related to this account</inlineHelpText>
    <label>Analysis/Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>