force-app/main/default/objects/Account/fields/Contact_emails_GM__c.field-meta.xml
<CustomField>
    <fullName>Contact_emails_GM__c</fullName>
    <description>The email addresses to be used when contacting this group</description>
    <inlineHelpText>The email addresses to be used when contacting this group</inlineHelpText>
    <label>Contact emails GM</label>
    <type>TextArea</type>
</CustomField>