force-app/main/default/objects/Account/fields/Contact_info_GM__c.field-meta.xml
<CustomField>
    <fullName>Contact_info_GM__c</fullName>
    <description>Contact info for this account based on primary contact, top-ranked linked address, and phones and emails</description>
    <inlineHelpText>Contact info for this account based on primary contact, top-ranked linked address, and phones and emails</inlineHelpText>
    <label>Contact info GM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>