force-app/main/default/objects/Account/fields/Contact_primary__c.field-meta.xml
<CustomField>
    <fullName>Contact_primary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary contact for this account - addressed in pre-contract, contract, and payment letters</description>
    <inlineHelpText>The primary contact for this account - addressed in pre-contract, contract, and payment letters</inlineHelpText>
    <label>Contact primary</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Primary contact must be one of the contacts linked to this account.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <infoMessage>Primary contact must be one of the contacts linked to this account.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contact primary)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>