force-app/main/default/objects/Account/fields/Correspondence_language__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_language__c</fullName>
    <description>The language to use in correspondence to this group</description>
    <inlineHelpText>The language to use in correspondence to this group</inlineHelpText>
    <label>Correspondence language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>