force-app/main/default/objects/Account/fields/Date_of_last_grant__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_grant__c</fullName>
    <description>Most recent date awarded for a grantee group (does not include &quot;award withdrawn&quot; grants)</description>
    <inlineHelpText>Most recent date awarded for a grantee group (does not include &quot;award withdrawn&quot; grants)</inlineHelpText>
    <label>Date of last grant</label>
    <summarizedField>Proposal__c.Date_awarded__c</summarizedField>
    <summaryFilterItems>
        <field>Proposal__c.Grant__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Proposal__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>