force-app/main/default/objects/Account/fields/Date_OFAC_checked__c.field-meta.xml
<CustomField>
    <fullName>Date_OFAC_checked__c</fullName>
    <description>Date of last OFAC check for account and contact names associated with this account</description>
    <inlineHelpText>Date of last OFAC check for account and contact names associated with this account</inlineHelpText>
    <label>Date OFAC checked</label>
    <type>Date</type>
</CustomField>