force-app/main/default/objects/Account/fields/Date_org_founded__c.field-meta.xml
<CustomField>
    <fullName>Date_org_founded__c</fullName>
    <description>Date the organization was founded</description>
    <inlineHelpText>Date the organization was founded</inlineHelpText>
    <label>Date org founded</label>
    <type>Date</type>
</CustomField>