force-app/main/default/objects/Account/fields/Do_not_call__c.field-meta.xml
<CustomField>
    <fullName>Do_not_call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the account/contacts under it do not wish to receive phone calls (including Year-end or thank you calls).</description>
    <inlineHelpText>Checked if the account/contacts under it do not wish to receive phone calls (including Year-end or thank you calls).</inlineHelpText>
    <label>Do not call</label>
    <type>Checkbox</type>
</CustomField>