force-app/main/default/objects/Account/fields/Do_not_contact__c.field-meta.xml
<CustomField>
    <fullName>Do_not_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to indicate that this Account wishes not to be contacted.</description>
    <inlineHelpText>Check this box to indicate that this Account wishes not to be contacted.</inlineHelpText>
    <label>Do not contact</label>
    <type>Checkbox</type>
</CustomField>