force-app/main/default/objects/Account/fields/Do_not_solicit__c.field-meta.xml
<CustomField>
    <fullName>Do_not_solicit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this account should not be solicited in any manner.</inlineHelpText>
    <label>Do not solicit</label>
    <type>Checkbox</type>
</CustomField>