force-app/main/default/objects/Account/fields/Earliest_date_awarded__c.field-meta.xml
<CustomField>
    <fullName>Earliest_date_awarded__c</fullName>
    <description>Date awarded of the first grant awarded to this organization</description>
    <inlineHelpText>Date awarded of the first grant awarded to this organization</inlineHelpText>
    <label>Earliest date awarded</label>
    <summarizedField>Proposal__c.Date_awarded__c</summarizedField>
    <summaryFilterItems>
        <field>Proposal__c.Date_awarded__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Proposal__c.Account__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>