force-app/main/default/objects/Account/fields/First_grant__c.field-meta.xml
<CustomField>
    <fullName>First_grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The earliest grant awarded to this account</description>
    <inlineHelpText>The earliest grant awarded to this account</inlineHelpText>
    <label>First grant</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Accounts (First grant awarded)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>