force-app/main/default/objects/Account/fields/FS_Group__c.field-meta.xml
<CustomField>
    <fullName>FS_Group__c</fullName>
    <description>FS Group to which this Account belongs based on Owner.</description>
    <formula>TEXT(Owner.FS_Group_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>FS Group to which this Account belongs based on Owner.</inlineHelpText>
    <label>FS Group</label>
    <type>Text</type>
</CustomField>