force-app/main/default/objects/Account/fields/GFW_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>GFW_Account_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The GFW Account ID</description>
    <externalId>true</externalId>
    <label>GFW Account ID</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>