force-app/main/default/objects/Account/fields/GM_applicant__c.field-meta.xml
<CustomField>
    <fullName>GM_applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this account has linked profiles or proposals</description>
    <inlineHelpText>Checked if this account has linked profiles or proposals</inlineHelpText>
    <label>GM applicant</label>
    <type>Checkbox</type>
</CustomField>