force-app/main/default/objects/Account/fields/GM_country__c.field-meta.xml
<CustomField>
    <fullName>GM_country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The country where this organization does its work (not necessarily its mailing country)</description>
    <inlineHelpText>The country where this organization does its work (not necessarily its mailing country)</inlineHelpText>
    <label>GM country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>