force-app/main/default/objects/Account/fields/GM_Email2__c.field-meta.xml
<CustomField>
    <fullName>GM_Email2__c</fullName>
    <description>Secondary email address for this account (for grantmaking-related correspondence)</description>
    <inlineHelpText>Secondary email address for this account (for grantmaking-related correspondence)</inlineHelpText>
    <label>GM Email2</label>
    <type>Email</type>
</CustomField>