force-app/main/default/objects/Account/fields/GM_Email__c.field-meta.xml
<CustomField>
    <fullName>GM_Email__c</fullName>
    <description>Primary email address for this account (for grantmaking-related correspondence)</description>
    <externalId>true</externalId>
    <inlineHelpText>Primary email address for this account (for grantmaking-related correspondence)</inlineHelpText>
    <label>GM Email</label>
    <type>Email</type>
</CustomField>