force-app/main/default/objects/Account/fields/GM_email_override__c.field-meta.xml
<CustomField>
    <fullName>GM_email_override__c</fullName>
    <description>If non-blank, then override the recipients of GM emails with this email address (or comma-separated list of email addresses).</description>
    <inlineHelpText>If non-blank, then override the recipients of GM emails with this email address (or comma-separated list of email addresses).</inlineHelpText>
    <label>GM email override</label>
    <type>TextArea</type>
</CustomField>