force-app/main/default/objects/Account/fields/GM_region__c.field-meta.xml
<CustomField>
    <fullName>GM_region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The region where this organization does its work.  NOTE: field will AutoUpdate upon Saving</description>
    <inlineHelpText>The region where this organization does its work.  NOTE: field will AutoUpdate upon Saving</inlineHelpText>
    <label>GM region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>