force-app/main/default/objects/Account/fields/Grantee__c.field-meta.xml
<CustomField>
    <fullName>Grantee__c</fullName>
    <description>Checked if this group has been awarded a grant by Global Fund for Women</description>
    <formula>Num_grants__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this group has been awarded a grant by Global Fund for Women</inlineHelpText>
    <label>Grantee</label>
    <type>Checkbox</type>
</CustomField>