force-app/main/default/objects/Account/fields/Greeting__c.field-meta.xml
<CustomField>
    <fullName>Greeting__c</fullName>
    <description>This is the greeting salutation as it might be used in a letter or email such as &quot;Mr. Smith&quot;, &quot;Dr. and Mr. Brown&quot; or &quot;Jack and Jill&quot;.  This field can contain 40 characters.</description>
    <inlineHelpText>This is the greeting salutation as it might be used in a letter or email such as &quot;Mr. Smith&quot;, &quot;Dr. and Mr. Brown&quot; or &quot;Jack and Jill&quot;.  This field can contain 40 characters.</inlineHelpText>
    <label>Account Greeting</label>
    <length>200</length>
    <type>Text</type>
</CustomField>