force-app/main/default/objects/Account/fields/Keep_confidential__c.field-meta.xml
<CustomField>
    <fullName>Keep_confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if we should not publicize name and contact info for this group</description>
    <inlineHelpText>Checked if we should not publicize name and contact info for this group</inlineHelpText>
    <label>Keep confidential</label>
    <type>Checkbox</type>
</CustomField>