force-app/main/default/objects/Account/fields/Latest_date_awarded__c.field-meta.xml
<CustomField>
    <fullName>Latest_date_awarded__c</fullName>
    <description>The most recent date awarded of all grants awarded to this account (includes &quot;award withdrawn&quot; grants)</description>
    <inlineHelpText>The most recent date awarded of all grants awarded to this account (includes &quot;award withdrawn&quot; grants)</inlineHelpText>
    <label>Latest date awarded</label>
    <summarizedField>Proposal__c.Date_awarded__c</summarizedField>
    <summaryFilterItems>
        <field>Proposal__c.Date_awarded__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Proposal__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>