force-app/main/default/objects/Account/fields/Latest_grant__c.field-meta.xml
<CustomField>
    <fullName>Latest_grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The grant most recently awarded to this account</description>
    <inlineHelpText>The grant most recently awarded to this account</inlineHelpText>
    <label>Latest grant</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>