force-app/main/default/objects/Account/fields/LinkedAddress__c.field-meta.xml
<CustomField>
    <fullName>LinkedAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Click this link to edit the Default Address.</description>
    <inlineHelpText>Click this link to edit the Default Address.</inlineHelpText>
    <label>Mailing Address Link</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>