force-app/main/default/objects/Account/fields/Mailing_No_Direct_Mail__c.field-meta.xml
<CustomField>
    <fullName>Mailing_No_Direct_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Don&apos;t send direct mail solicitations or direct mail cultivations</description>
    <inlineHelpText>Don&apos;t send direct mail solicitations or direct mail cultivations</inlineHelpText>
    <label>Mailing: No Direct Mail</label>
    <type>Checkbox</type>
</CustomField>