force-app/main/default/objects/Account/fields/Mailing_No_Solicitations__c.field-meta.xml
<CustomField>
    <fullName>Mailing_No_Solicitations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No direct mail solicitations</description>
    <inlineHelpText>No direct mail solicitations</inlineHelpText>
    <label>Mailing: No Solicitations</label>
    <type>Checkbox</type>
</CustomField>