force-app/main/default/objects/Account/fields/Name_on_bank_account__c.field-meta.xml
<CustomField>
    <fullName>Name_on_bank_account__c</fullName>
    <description>The name on this organization&apos;s bank account (if different from Account Name)</description>
    <inlineHelpText>The name on this organization&apos;s bank account (if different from Account Name)</inlineHelpText>
    <label>Name on bank account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>