force-app/main/default/objects/Account/fields/No_Sharing__c.field-meta.xml
<CustomField>
    <fullName>No_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this account has indicated a preference that no account/contact information be shared with other organizations.</description>
    <inlineHelpText>Checked if this account has indicated a preference that no account/contact information be shared with other organizations.</inlineHelpText>
    <label>No Sharing</label>
    <type>Checkbox</type>
</CustomField>